--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "nodemon": "^2.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "uuidv4": "^6.2.12",
     "web-vitals": "^1.0.1"
   },
